--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "url": "https://github.com/advbet/log-generator/issues"
   },
   "homepage": "https://github.com/advbet/log-generator#readme",
-  "dependencies": {
-    "dayjs": "^1.8.24",
-    "lodash": "^4.17.21",
-    "loggly-jslogger": "^2.2.2",
-    "ua-parser-js": "^1.0.2"
-  },
   "devDependencies": {
+    "@types/lodash": "^4.14.184",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "eslint": "^8.22.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.8.24",
+    "lodash": "^4.17.21",
+    "loggly-jslogger": "^2.2.2",
+    "ua-parser-js": "^1.0.2"
   }
 }
